2005-02-06  Andras Varga

	* gateinsp.tcl, modinsp.cc: fixed cGate inspector error introduced 
	in 3.0

2005-01-17  Andras Varga

	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
	[suggested by Michael Tuexen]

2005-01-10  Andras Varga

	* tkapp.cc, tkcmd.cc: factored out platform dependencies to 
	include/platdep

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-15  Andras Varga

	* extra-stack= option replaced with extra-stack-kb. Default raised to
	48K (37K stack usage was observed on SUSE 9.1)

2004-12-10  Andras Varga

	* default background color changed from #c0c0c0 to #d0d0d0 

2004-11-29  Andras Varga

  	* tkapp.cc: on Mac OS/X, implement ftime() with gettimeofday() [patch 
  	from Michael Tuexen]

  	* tkutil.cc: hide gatev and paramv in "Contents" page of a simple 
  	module inspector

2004-11-25  Andras Varga

	* several files: displayStringAsParent() renamed to backgroundDisplay-
	String(); cSimpleChannel renamed to cBasicChannel

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-18  Andras Varga

	* menuproc.tc: added exit confirmation question "Do you want to call
	finish() before exiting? Yes No Cancel"

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-01  Andras Varga

	* main.tcl, modinsp2.tcl: created display string tag for icon size:
	"is=" (can be "vl", "l", "n", "s", "vs" for very large, large, normal,
	small, very small). Similarly, tag "is2=" sets size of auxiliary icon
	("i2=" tag). The underscore notation ("i=penguin_s") also still exists.

2004-10-27  Andras Varga

	* tkapp.cc: fix: readPerRunOptions() was not protected by try/catch

2004-10-25  Andras Varga

	* tkapp.cc, tkcmd.cc, etc: updated for info() and fullPath()
	signature changes (see include/ChangeLog)

2004-10-20  Andras Varga

	* main.tcl, modinsp2.tcl: preparations for new icons, categorized into
	several subdirs under bitmaps/. Current icons will be moved to
	into the bitmaps/old subdirectory.
