@@ -48,10 +48,30 @@ num-rngs=3
 
 *.a[0].rng-0 = 1
 *.a[*].rng-0 = 2
+*.a[1].rng-0 = 0   # should not affect anything
 
-*.a[*].rng-1 = 0
 *.a[2].rng-1 = 1
+*.a[*].rng-1 = 0
+*.a[1].rng-1 = 2   # should not affect anything
 
-%contains: stdout
-ddfsfsfdsfdsfdsfdsfdsfsdfds
+%contains-regex: stdout
+a\[0\]\.rng-0 --> ev\.rng-1
+a\[0\]\.rng-1 --> ev\.rng-0
+a\[0\]\.rng-2 --> ev\.rng-2
+.*
+a\[1\]\.rng-0 --> ev\.rng-2
+a\[1\]\.rng-1 --> ev\.rng-0
+a\[1\]\.rng-2 --> ev\.rng-2
+.*
+a\[2\]\.rng-0 --> ev\.rng-2
+a\[2\]\.rng-1 --> ev\.rng-1
+a\[2\]\.rng-2 --> ev\.rng-2
+.*
+a\[3\]\.rng-0 --> ev\.rng-2
+a\[3\]\.rng-1 --> ev\.rng-0
+a\[3\]\.rng-2 --> ev\.rng-2
+.*
+a\[4\]\.rng-0 --> ev\.rng-2
+a\[4\]\.rng-1 --> ev\.rng-0
+a\[4\]\.rng-2 --> ev\.rng-2
 
